base.css: fix #i4 css glitch: on narrow screens the left margin is too (decoration is hidden by scroll bar)

--- a/base/static/base.css
+++ b/base/static/base.css
@@ -47,7 +47,7 @@ html, body {
     margin: 0px;
     padding: 0px;
     height:100%;
-    width:98%;
+    width:100%;
     font-size: var(--font-size-all);
 
     /* prevent horizontal scrolling */
@@ -239,9 +239,12 @@ div.header a:hover{
     padding-top: 0em;
     padding-bottom: 2em;
     margin-top: calc(var(--header-height)*1.5);
+
+    width: var(--width-content);
+
     margin-left: auto;
     margin-right: auto;
-    width: var(--width-content);
+
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
     border-radius: 2px;
 
